# cacheout-mcp

./: .gitignore  README.md  pyproject.toml
config/: cacheout-watchdog.sh
skills/cacheout-disk-manager/: SKILL.md
src/cacheout_mcp/: __init__.py  categories.py  engine.py  memory_models.py  memory_tools.py  server.py
tests/: test_memory_intervention.py  test_memory_parsers.py  test_recommendations.py  test_smart_clean_alerts_memory.py  test_smoke.py  test_socket_health_autopilot.py
